http/tests/cache-storage/cache-origins.https.html is flaky https://bugs.webkit.org/show_bug.cgi?id=236263

Reviewed by Darin Adler.

Source/WebCore:

Drop workaround landed in r289247 to try and maintain HashMap ordering.

* page/SecurityOriginData.h:
(WebCore::add):

Source/WebKit:

Update CacheStorage::Engine::representation() (which is used by the layout tests) to return
origins in a stable order in order to address test flakiness.

* NetworkProcess/cache/CacheStorageEngine.cpp:
(WebKit::CacheStorage::Engine::representation):



Canonical link: https://commits.webkit.org/246982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289419 268f45cc-cd09-0410-ab3c-d52691b4dbfc